# mn_xiao_shuo

./: .env.example  .gitignore  API_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  GAME_UI_IMPLEMENTATION.md  GLOBAL_DIRECTOR_SUMMARY.md  LOGGER_IMPORT_FIX_SUMMARY.md  MIGRATION_SUCCESS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_FINAL.md  OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART_AGENT_SDK.md  QUICK_START_API.md  README.md  interactive_generator.py  main.py  mypy.ini  pyproject.toml  requirements.txt  run.sh  start_all_with_agent.sh  stop_all.sh  test_chat_stream.py
config/: litellm_config.yaml  litellm_proxy_config.yaml  llm_agents.yaml  llm_backend.yaml  novel_types.yaml
docs/: CLAUDE_AGENT_SDK_INTEGRATION.md  COMPLETE_IMPLEMENTATION_AB.md  DIRECTORY_MIGRATION_GUIDE.md  DIRECTORY_REORGANIZATION_PLAN.md  DIRECTORY_STRUCTURE.md  INDEX.md  LITELLM_PROXY_MIGRATION_COMPLETE.md  MIGRATION_COMPLETE.md  PHASE2_ROADMAP.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  QUICK_SWITCH_MODEL.md  ROADMAP_NEXT_PHASE.md  SECURITY_GUIDE.md  TECHNICAL_ARCHITECTURE.md  TECHNICAL_IMPLEMENTATION_PLAN.md  TESTING_GUIDE.md  UPDATES_2025_11_08.md  WORLDPACK_QUICKSTART.md  WORLDPACK_TO_ADVENTURE.md
examples/: game_engine_demo.py  global_director_demo.py  replay_demo.py  scifi_setting.json  simulation_demo.py  snapshot_demo.py  xianxia_setting.json
scripts/: import_assets.py  init_db.py  migrate_directory_structure.sh  migrate_directory_structure_v2.sh  migrate_world_schema.py  start_litellm_proxy.sh
web/: CHAT_FEATURE.md  CHAT_FEATURES.md  FRONTEND_IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  (+6 more)
(+318 files in other folders)
